improve major variables

--- a/docs/parts/definitions.tex
+++ b/docs/parts/definitions.tex
@@ -1,3 +1,5 @@
+\section{Definition of Terms}
+
 Throughout the documentation of the code, the following definitions explain
 some of the terms that will be encountered:
 
