improve major variables

--- a/docs/parts/algorithm.tex
+++ b/docs/parts/algorithm.tex
@@ -1,7 +1,10 @@
 \section{Algorithm}
+
 \subsection{Pre-game Algorithm}
 
-This algorithm initializes once the application runs, in contrast to the In-game algorithm which runs only when the user chooses Start from the menu, that is, the actual game.
+This algorithm initializes once the application runs, in contrast to the
+In-game algorithm which runs only when the user chooses Start from the menu,
+that is, the actual game.
 
 \begin{enumerate}
     \item Application launches
