--- a/docs/parts/compiling.tex
+++ b/docs/parts/compiling.tex
@@ -117,7 +117,7 @@ make run
 Note that, it is important to avoid moving the executable since Windows will not
 be able to find the DLLs which are required for running the game.\\
 
-Hooray! You have now compiled and run the application.
+Hooray! You have now compiled and ran the application.
 
 \subsection{Linux}
 
@@ -141,4 +141,4 @@ following command.
 make run
 \end{lstlisting}
 
-Hooray! You have now compiled and run the application.
+Hooray! You have now compiled and ran the application.
