--- a/docs/parts/introduction.tex
+++ b/docs/parts/introduction.tex
@@ -2,6 +2,6 @@
 \section{Introduction}
 
 \emph{Ghostless Pacman} is a 2021 adaptation of the video game series Pac-man™,
-only without the, as stated, ghosts. It was mainly recreated using the C
+only without the ghosts. It was mainly created using the C Programming
 language by Brymer Meneses and Paul Gapud, Computer Science freshmen
-from the University of the Philippines - Baguio.
+from the University of the Philippines -- Baguio.
