add changes to docs

--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -18,8 +18,8 @@
         array
 }
 \hypersetup{
-    linkcolor=blue,
-    colorlinks=true,
+    linkcolor=black,
+    colorlinks=cyan,
     urlcolor=blue,
     linkbordercolor = {white},
 }
@@ -93,8 +93,8 @@
 \newpage
 
 \input{parts/introduction.tex}
-\input{parts/description.tex}
 \input{parts/definitions.tex}
+\input{parts/description.tex}
 \input{parts/algorithm.tex}
 \input{parts/error_handling.tex}
 \input{parts/manual.tex}
