--- a/docs/parts/description.tex
+++ b/docs/parts/description.tex
@@ -135,22 +135,43 @@ Variables used in the game are much elaborated on the lines of code at which the
         \codeword{States states} & 
                             An instance of the struct \codeword{States} that
                             manages the state of the application 
-                            It contains the following members:
+                            This struct several variables, the following 
+                            are the most used members of this struct:
                             \begin{enumerate}
                                 \item \codeword{player_state}
                                 \item \codeword{game_state}
                                 \item \codeword{wrong_input_state}
-                                \item \codeword{current_tutorial_page}
-                                \item \codeword{wrong_input_time}
                             \end{enumerate} \\
         \midrule
-        \codeword{states.player_state} & an \codeword{enum} variable that returns the current state of the player in the application. States include \codeword{PLAYER_IN_MENU}, \codeword{PLAYER_IN_GAME}, \codeword{PLAYER_IN_TUTORIAL}, and \codeword{PLAYER_IN_ABOUT}. \\
+        \codeword{states.player_state} & An \codeword{enum} variable that
+        returns the current state of the player in the application. States
+        include \codeword{PLAYER_IN_MENU}, \codeword{PLAYER_IN_GAME},
+        \codeword{PLAYER_IN_TUTORIAL}, and \codeword{PLAYER_IN_ABOUT}. \\
         \midrule
-        \codeword{states.game_state} & an \codeword{enum} variable that returns the current state of the game itself. States include \codeword{GAME_WON}, \codeword{GAME_LOST_HIT_BLOCK}, \codeword{GAME_LOST_HIT_BORDER}, \codeword{GAME_LOST_INSUFFICIENT_FOOD}, \codeword{GAME_IN_PROGRESS}, and \codeword{GAME_IN_FOOD_NUMBER_INPUT}.\\       \\
+        \codeword{states.game_state} & An \codeword{enum} variable that returns
+        the current state of the game itself. States include
+        \codeword{GAME_WON}, \codeword{GAME_LOST_HIT_BLOCK},
+        \codeword{GAME_LOST_HIT_BORDER},
+        \codeword{GAME_LOST_INSUFFICIENT_FOOD}, \codeword{GAME_IN_PROGRESS},
+        and \codeword{GAME_IN_FOOD_NUMBER_INPUT}.\\       \\
         \midrule
-        \codeword{states.wrong_input_state} & an \codeword{enum} variable that returns the current state of wrong input or keypress, specifically at which game state it occurs. States include \codeword{WRONG_INPUT_NONE}, \codeword{WRONG_INPUT_IN_MENU}, \codeword{WRONG_INPUT_IN_GAME}, \codeword{WRONG_INPUT_IN_GAME_PROMPTS}, \codeword{WRONG_INPUT_IN_ABOUT_GAME}, \codeword{WRONG_INPUT_IN_TUTORIAL}, and \codeword{WRONG_INPUT_IN_FOOD_INPUT}\\
+        \codeword{states.wrong_input_state} & An \codeword{enum} variable that returns the current state of wrong input or keypress, specifically at which game state it occurs. States include \codeword{WRONG_INPUT_NONE}, \codeword{WRONG_INPUT_IN_MENU}, \codeword{WRONG_INPUT_IN_GAME}, \codeword{WRONG_INPUT_IN_GAME_PROMPTS}, \codeword{WRONG_INPUT_IN_ABOUT_GAME}, \codeword{WRONG_INPUT_IN_TUTORIAL}, and \codeword{WRONG_INPUT_IN_FOOD_INPUT}\\
         \midrule
-        \codeword{player_keypress} & is a variable related to the scanning of what keys the user presses, through SDL's \codeword{SDL_Keycode}. This variable is frequently mentioned in the code, since the program mostly relies on the keypresses and inputs of the user. \\
+        \codeword{player_keypress} &  A variable related to the scanning of
+        what keys the player presses, through SDL's \codeword{SDL_Keycode}. This
+        variable is frequently mentioned in the code, since the program mostly
+        relies on the keypresses and inputs of the user. This variable defined
+        can be seeon on the function \codeword{render_state} on the file \codeword{state.c}.\\
         \midrule
     \end{tabular}
 \end{table}
+
+\subsection{Project Structure}
+The picture below shows the file structure of this project.
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=0.7\textwidth]{assets/project_structure.png}
+    \end{center}
+\end{figure}
+
+
